--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,29 +21,30 @@
 
 include-file = ~/.config/polybar/colors.ini
 
+font-0 = MononokiNerdFont:10;2
+
 [bar/workspaces]
-line-size = 2
 offset-x = 0.5%
 offset-y = 2
-width = 19.5%
+width = 16.5%
 height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
 modules-center = bspwm
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [bar/xwindow]
 line-size = 2
-offset-x = 20.5%
+offset-x = 17.5%
 offset-y = 2
 width = 32%
 height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
 modules-center = xwindow
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [bar/date]
 line-size = 2
@@ -54,8 +55,8 @@ height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
 modules-center = date
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [bar/wlan]
 line-size = 2
@@ -66,44 +67,44 @@ height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
 modules-center = wlan
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [bar/cpu]
 line-size = 2
-offset-x = 66.5%
+offset-x = 68.5%
 offset-y = 2
-width = 6%
+width = 4%
 height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
 modules-center = cpu
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [bar/memory]
 line-size = 2
-offset-x = 60%
+offset-x = 64%
 offset-y = 2
-width = 6%
+width = 4%
 height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
 modules-center = memory
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [bar/battery]
 line-size = 2
-offset-x = 53.5%
+offset-x = 59.5%
 offset-y = 2
-width = 6%
+width = 4%
 height = 15
 radius = 5
 background = ${color.background}
 foreground = ${color.shade1}
-font-0 = IosevkaNerdFont:pixelsize=10;2
-modules-center = battery
+modules-center = battery 
+font-0 = MononokiNerdFont:pixelsize=9;2
 
 [module/bspwm]
 type = internal/bspwm
@@ -131,14 +132,14 @@ label = %title:0:60:...%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "﬙ "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = "󰻠 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -148,11 +149,14 @@ interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+ip = 8.8.8.8
+ping_interval = 2
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %ifname%%{F-} %essid% %local_ip%
+label-connected = 󱚽  %essid% %local_ip%
+label-disconnected = 󰖪  %essid% %local_ip%
 
 [module/date]
 type = internal/date
@@ -173,21 +177,15 @@ pseudo-transparency = true
 type = internal/battery
 battery = BATT
 adapter = ACAD
-format-full =  100%
-format-charging =  <label-charging> <animation-charging>
-format-discharging = <ramp-capacity> <label-discharging>
+format-full =    %100%
+format-charging =   <label-charging>
+format-discharging = <ramp-capacity>  <label-discharging>
 format-charging-foreground = ${colors.char}
 format-full-foreground = ${colors.blue}
 format-discharging-foreground = ${colors.disc}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-2 =    
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
-
+animation-charging-framerate = 100
