--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -12,19 +12,19 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #000000
-foreground = #000000
-foreground-alt = #f5f5f5
+background = #21252b
+foreground = #21252b
+foreground-alt = #d9dbde
 alpha = #00000000
 
 ;; shades
-shade1 = #B0B0B0
-shade2 = #C8C8C8
-shade3 = #B0B0B0
-shade4 = #C8C8C8
-shade5 = #B0B0B0
-shade6 = #C8C8C8
-shade7 = #B0B0B0
-shade8 = #C8C8C8
+shade1 = #898E97
+shade2 = #979BA3
+shade3 = #898E97
+shade4 = #979BA3
+shade5 = #898E97
+shade6 = #979BA3
+shade7 = #898E97
+shade8 = #979BA3
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
