--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -8,23 +8,37 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [color]
+ base = #1e1e2e
+ mantle = #181825
+ crust = #11111b
 
-;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
+ text = #cdd6f4
+ subtext0 = #a6adc8
+ subtext1 = #bac2de
 
-;; main colors
-background = #21252b
-foreground = #21252b
-foreground-alt = #d9dbde
-alpha = #00000000
+ surface0 = #313244
+ surface1 = #45475a
+ surface2 = #585b70
+ 
+ overlay0 = #6c7086
+ overlay1 = #7f849c
+ overlay2 = #9399b2
+ 
 
-;; shades
-shade1 = #898E97
-shade2 = #979BA3
-shade3 = #898E97
-shade4 = #979BA3
-shade5 = #898E97
-shade6 = #979BA3
-shade7 = #898E97
-shade8 = #979BA3
+ blue = #89b4fa
+ lavender = #b4befe
+ sapphire = #74c7ec
+ sky = #89dceb
+ teal = #94e2d5
+ green = #a6e3a1
+ yellow = #f9e2af
+ peach = #fab387
+ maroon = #eba0ac
+ red = #f38ba8
+ mauve = #cba6f7
+ pink = #f5c2e7
+ flamingo = #f2cdcd
+ rosewater = #f5e0dc
 
+ transparent = #FF00000
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
