--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,47 +1,48 @@
-
-# Habilitar el backend de GLX para Picom
+#################################
+#     GLX backend
+#################################
 backend = "glx";
-
-# Habilitar el efecto de desenfoque (blur)
-blur-method = "kawase";
-blur-strength = 2;
-blur-background = true;
-blur-background-frame = true;
-blur-background-fixed = true;
-blur-kern = "3x3box";
-
-
-corner-radius = 8.0;
-rounded-corners-exclude = [
- "class_g = 'Polybar'",
-];
-round-borders = 1;
-
-fading = true;
-fade-delta = 5;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-
-
-
-experimental-backends = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
 vsync = true;
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-detect-rounded-corners = true;
-refresh-rate = 0;
-use-ewmh-active-win = true
-detect-transient = true;
-detect-client-leader = true;
-use-damage = true;
-log-level = "info";
+xrender-sync-fence = "true";
+glx-swap-method = -1;
 
-
-# Sombra
+#################################
+#       Shadows
+#################################
 shadow = true;
-shadow-radius = 20;
-shadow-offset-x = -10;
-shadow-offset-y = -15;
-shadow-opacity = 1;
-shadow-exclude = [        "! name~=''",        "name = 'Notification'",        "name = 'Docky'",        "name = 'Kupfer'",        "name = 'xfce4-notifyd'",        "name = 'xfce4-power-manager'"];
+shadow-radius = 8;
+shadow-offset-x = 1;
+shadow-offset-y = 1;
+shadow-opacity = 0.3;
+shadow-ignore-shaped = false;
 
+#################################
+#       Opacity
+#################################
+#inactive-opacity = 1;
+#active-opacity = 1;
+#frame-opacity = 0.8;
+#inactive-opacity-override = false;
+#blur-background = true;
+#blur-background-frame = true;
+#blur-background-fixed = true;
+#blur-background-exclude = [
+#    "window_type = 'dock'",
+#    "window_type = 'desktop'"
+#];
+#blur-kern = "3x3box";
+#blur-method = "kawase";
+#blur-strength = 10;
+#opacity-rule = [
+#  "90:class_g = 'Alacritty'"
+#];
+
+#################################
+#       Corners
+#################################
+
+corner-radius = 7;
+round-borders = 7;
+	
