--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,11 +28,10 @@ offset-x = 0.5%
 offset-y = 2
 width = 16.5%
 height = 15
-radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = bspwm
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
 
 [bar/xwindow]
 line-size = 2
@@ -40,11 +39,10 @@ offset-x = 17.5%
 offset-y = 2
 width = 32%
 height = 15
-radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = xwindow
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFontMono:pixelsize=9;2
 
 [bar/date]
 line-size = 2
@@ -53,10 +51,10 @@ offset-y = 2
 width = 12%
 height = 15
 radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = date
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
 
 [bar/wlan]
 line-size = 2
@@ -65,10 +63,10 @@ offset-y = 2
 width = 14%
 height = 15
 radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = wlan
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
 
 [bar/cpu]
 line-size = 2
@@ -77,10 +75,10 @@ offset-y = 2
 width = 4%
 height = 15
 radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = cpu
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
 
 [bar/memory]
 line-size = 2
@@ -89,10 +87,10 @@ offset-y = 2
 width = 4%
 height = 15
 radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = memory
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
 
 [bar/battery]
 line-size = 2
@@ -101,10 +99,11 @@ offset-y = 2
 width = 4%
 height = 15
 radius = 5
-background = ${color.background}
-foreground = ${color.shade1}
+background = ${color.base}
+foreground = ${color.text}
 modules-center = battery 
-font-0 = MononokiNerdFont:pixelsize=9;2
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+
 
 [module/bspwm]
 type = internal/bspwm
@@ -114,15 +113,15 @@ format = <label-state><label-mode>
 ws-icon-default = 
 
 label-occupied = 
-label-occupied-foreground = ${color.shade2}
+label-occupied-foreground = ${color.lavender}
 label-occupied-padding = 1
 
 label-empty = 
-label-empty-foreground = ${color.foreground-light}
+label-empty-foreground = ${color.text}
 label-empty-padding = 1
 
 label-active = 
-label-active-foreground = ${color.shade1}
+label-active-foreground = ${color.text}
 label-active-padding = 1
 
 [module/xwindow]
@@ -133,14 +132,14 @@ label = %title:0:60:...%
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${color.text}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "󰻠 "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${color.text}
 label = %percentage:2%%
 
 [network-base]
@@ -165,7 +164,7 @@ interval = 1
 date =  %Y-%m-%d %I:%M %p
 
 label = %date%
-label-foreground = ${colors.primary}
+label-foreground = ${color.text}
 
 [settings]
 screenchange-reload = true
@@ -180,9 +179,9 @@ adapter = ACAD
 format-full =    %100%
 format-charging =   <label-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
-format-charging-foreground = ${colors.char}
-format-full-foreground = ${colors.blue}
-format-discharging-foreground = ${colors.disc}
+format-charging-foreground = ${color.text}
+format-full-foreground = ${color.text}
+format-discharging-foreground = ${color.text}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 =    
