--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -104,6 +104,18 @@ foreground = ${color.text}
 modules-center = battery 
 font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
 
+[bar/keyboard]
+line-size = 2
+offset-x = 51%
+offset-y = 2
+width = 8%
+height = 15
+radius = 5
+background = ${color.base}
+foreground = ${color.text}
+modules-center = xkeyboard
+font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+
 
 [module/bspwm]
 type = internal/bspwm
@@ -188,3 +200,14 @@ ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 animation-charging-framerate = 100
+
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+
+label-layout = %layout%
+label-layout-foreground = ${colors.primary}
+
+label-indicator-padding = 1
+label-indicator-foreground = ${colors.background}
+label-indicator-background = ${colors.secondary}
