--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -31,7 +31,7 @@ height = 15
 background = ${color.base}
 foreground = ${color.text}
 modules-center = bspwm
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/xwindow]
 line-size = 2
@@ -42,7 +42,7 @@ height = 15
 background = ${color.base}
 foreground = ${color.text}
 modules-center = xwindow
-font-0 = CaskaydiaCoveNerdFontMono:pixelsize=9;2
+font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/date]
 line-size = 2
@@ -54,7 +54,7 @@ radius = 5
 background = ${color.base}
 foreground = ${color.text}
 modules-center = date
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/wlan]
 line-size = 2
@@ -66,35 +66,11 @@ radius = 5
 background = ${color.base}
 foreground = ${color.text}
 modules-center = wlan
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
-
-[bar/cpu]
-line-size = 2
-offset-x = 68.5%
-offset-y = 2
-width = 4%
-height = 15
-radius = 5
-background = ${color.base}
-foreground = ${color.text}
-modules-center = cpu
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
-
-[bar/memory]
-line-size = 2
-offset-x = 64%
-offset-y = 2
-width = 4%
-height = 15
-radius = 5
-background = ${color.base}
-foreground = ${color.text}
-modules-center = memory
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/battery]
 line-size = 2
-offset-x = 59.5%
+offset-x = 60%
 offset-y = 2
 width = 4%
 height = 15
@@ -102,11 +78,11 @@ radius = 5
 background = ${color.base}
 foreground = ${color.text}
 modules-center = battery 
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/keyboard]
 line-size = 2
-offset-x = 51%
+offset-x = 64.5%
 offset-y = 2
 width = 8%
 height = 15
@@ -114,7 +90,7 @@ radius = 5
 background = ${color.base}
 foreground = ${color.text}
 modules-center = xkeyboard
-font-0 = CaskaydiaCoveNerdFont:pixelsize=9;2
+font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 
 [module/bspwm]
@@ -139,20 +115,6 @@ label-active-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${color.text}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "󰻠 "
-format-prefix-foreground = ${color.text}
-label = %percentage:2%%
 
 [network-base]
 type = internal/network
@@ -206,8 +168,8 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+label-layout-foreground = ${color.text}
 
 label-indicator-padding = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-foreground = ${color.text}
+label-indicator-background = ${color.base}
