--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,7 +29,7 @@ offset-y = 2
 width = 16.5%
 height = 15
 background = ${color.base}
-foreground = ${color.text}
+foreground = ${color.crust}
 modules-center = bspwm
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
@@ -40,7 +40,7 @@ offset-y = 2
 width = 32%
 height = 15
 background = ${color.base}
-foreground = ${color.text}
+foreground = ${color.peach}
 modules-center = xwindow
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
@@ -52,7 +52,7 @@ width = 12%
 height = 15
 radius = 5
 background = ${color.base}
-foreground = ${color.text}
+foreground = ${color.green}
 modules-center = date
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
@@ -64,7 +64,7 @@ width = 14%
 height = 15
 radius = 5
 background = ${color.base}
-foreground = ${color.text}
+foreground = ${color.pink}
 modules-center = wlan
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
@@ -76,7 +76,6 @@ width = 4%
 height = 15
 radius = 5
 background = ${color.base}
-foreground = ${color.text}
 modules-center = battery 
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
@@ -88,7 +87,6 @@ width = 8%
 height = 15
 radius = 5
 background = ${color.base}
-foreground = ${color.text}
 modules-center = xkeyboard
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
@@ -101,15 +99,15 @@ format = <label-state><label-mode>
 ws-icon-default = 
 
 label-occupied = 
-label-occupied-foreground = ${color.lavender}
+label-occupied-foreground = ${color.teal}
 label-occupied-padding = 1
 
 label-empty = 
-label-empty-foreground = ${color.text}
+label-empty-foreground = ${color.rosewater}
 label-empty-padding = 1
 
 label-active = 
-label-active-foreground = ${color.text}
+label-active-foreground = ${color.teal}
 label-active-padding = 1
 
 [module/xwindow]
@@ -138,7 +136,7 @@ interval = 1
 date =  %Y-%m-%d %I:%M %p
 
 label = %date%
-label-foreground = ${color.text}
+label-foreground = ${color.rosewater}
 
 [settings]
 screenchange-reload = true
@@ -153,9 +151,9 @@ adapter = ACAD
 format-full =    %100%
 format-charging =   <label-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
-format-charging-foreground = ${color.text}
-format-full-foreground = ${color.text}
-format-discharging-foreground = ${color.text}
+format-charging-foreground = ${color.green}
+format-full-foreground = ${color.peach}
+format-discharging-foreground = ${color.red}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 =    
@@ -168,8 +166,8 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 
 label-layout = %layout%
-label-layout-foreground = ${color.text}
+label-layout-foreground = ${color.mauve}
 
 label-indicator-padding = 1
-label-indicator-foreground = ${color.text}
+label-indicator-foreground = ${color.rosewater}
 label-indicator-background = ${color.base}
