--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,11 +2,11 @@
 #     GLX backend
 #################################
 backend = "glx";
-glx-no-stencil = true;
-glx-no-rebind-pixmap = true;
+#glx-no-stencil = true;
+#glx-no-rebind-pixmap = true;
 vsync = true;
 xrender-sync-fence = "true";
-glx-swap-method = -1;
+#glx-swap-method = -1;
 
 #################################
 #       Shadows
@@ -17,27 +17,6 @@ shadow-offset-x = 1;
 shadow-offset-y = 1;
 shadow-opacity = 0.3;
 shadow-ignore-shaped = false;
-
-#################################
-#       Opacity
-#################################
-#inactive-opacity = 1;
-#active-opacity = 1;
-#frame-opacity = 0.8;
-#inactive-opacity-override = false;
-#blur-background = true;
-#blur-background-frame = true;
-#blur-background-fixed = true;
-#blur-background-exclude = [
-#    "window_type = 'dock'",
-#    "window_type = 'desktop'"
-#];
-#blur-kern = "3x3box";
-#blur-method = "kawase";
-#blur-strength = 10;
-#opacity-rule = [
-#  "90:class_g = 'Alacritty'"
-#];
 
 #################################
 #       Corners
