--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,7 +21,7 @@
 
 include-file = ~/.config/polybar/colors.ini
 
-font-0 = MononokiNerdFont:10;2
+font-0 = JetBrainsMonoNerdFont:10;2
 
 [bar/workspaces]
 offset-x = 0.5%
@@ -50,7 +50,6 @@ offset-x = 87.5%
 offset-y = 2
 width = 12%
 height = 15
-radius = 5
 background = ${color.base}
 foreground = ${color.green}
 modules-center = date
@@ -62,7 +61,6 @@ offset-x = 73%
 offset-y = 2
 width = 14%
 height = 15
-radius = 5
 background = ${color.base}
 foreground = ${color.pink}
 modules-center = wlan
@@ -74,7 +72,6 @@ offset-x = 60%
 offset-y = 2
 width = 4%
 height = 15
-radius = 5
 background = ${color.base}
 modules-center = battery 
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
@@ -85,7 +82,6 @@ offset-x = 64.5%
 offset-y = 2
 width = 8%
 height = 15
-radius = 5
 background = ${color.base}
 modules-center = xkeyboard
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
@@ -96,17 +92,17 @@ type = internal/bspwm
 
 format = <label-state><label-mode>
 
-ws-icon-default = 
+ws-icon-default = 
 
 label-occupied = 
 label-occupied-foreground = ${color.teal}
 label-occupied-padding = 1
 
-label-empty = 
+label-empty = 
 label-empty-foreground = ${color.rosewater}
 label-empty-padding = 1
 
-label-active = 
+label-active = 
 label-active-foreground = ${color.teal}
 label-active-padding = 1
 
