Update and fix config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,23 +1,4 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-
-;==========================================================
-
-;; File Inclusion
-; include an external file, like module file, etc.
+;; Polybar
 
 include-file = ~/.config/polybar/colors.ini
 
@@ -63,7 +44,7 @@ width = 14%
 height = 15
 background = ${color.base}
 foreground = ${color.pink}
-modules-center = wlan
+modules-center = internet wlan
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/battery]
@@ -73,7 +54,7 @@ offset-y = 2
 width = 4%
 height = 15
 background = ${color.base}
-modules-center = battery 
+modules-center = battery
 font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
 
 [bar/keyboard]
@@ -122,8 +103,13 @@ ping_interval = 2
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = 󱚽  %essid% %local_ip%
-label-disconnected = 󰖪  %essid% %local_ip%
+label-connected =  %essid% %local_ip%
+label-disconnected =  %essid% %local_ip%
+
+[module/internet]
+type = custom/script
+interval = 10
+exec = ping -c 1 8.8.8.8 > /dev/null && echo " 󱚽  " || echo " 󰖪  "
 
 [module/date]
 type = internal/date
@@ -152,7 +138,7 @@ format-full-foreground = ${color.peach}
 format-discharging-foreground = ${color.red}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
-ramp-capacity-2 =    
+ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 animation-charging-framerate = 100
