--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -8,7 +8,7 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [color]
- base = #1e1e2e
+ base = #0B0F10
  mantle = #181825
  crust = #11111b
 
@@ -19,11 +19,11 @@
  surface0 = #313244
  surface1 = #45475a
  surface2 = #585b70
- 
+
  overlay0 = #6c7086
  overlay1 = #7f849c
  overlay2 = #9399b2
- 
+
 
  blue = #89b4fa
  lavender = #b4befe
