--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -2,7 +2,7 @@
 
 include-file = ~/.config/polybar/colors.ini
 
-font-0 = JetBrainsMonoNerdFont:10;2
+font-0 = SFMonoNerdFont:10;2
 
 [bar/workspaces]
 offset-x = 0.5%
@@ -12,7 +12,7 @@ height = 15
 background = ${color.base}
 foreground = ${color.crust}
 modules-center = bspwm
-font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
+font-0 = SFMono Nerd Font:pixelsize=9;2
 
 [bar/xwindow]
 line-size = 2
@@ -23,7 +23,7 @@ height = 15
 background = ${color.base}
 foreground = ${color.peach}
 modules-center = xwindow
-font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
+font-0 = SFMono Nerd Font:pixelsize=9;2
 
 [bar/date]
 line-size = 2
@@ -34,7 +34,7 @@ height = 15
 background = ${color.base}
 foreground = ${color.green}
 modules-center = date
-font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
+font-0 = SFMono Nerd Font:pixelsize=9;2
 
 [bar/wlan]
 line-size = 2
@@ -45,7 +45,7 @@ height = 15
 background = ${color.base}
 foreground = ${color.pink}
 modules-center = internet wlan
-font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
+font-0 = SFMono Nerd Font:pixelsize=9;2
 
 [bar/battery]
 line-size = 2
@@ -55,7 +55,7 @@ width = 4%
 height = 15
 background = ${color.base}
 modules-center = battery
-font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
+font-0 = SFMono Nerd Font:pixelsize=9;2
 
 [bar/keyboard]
 line-size = 2
@@ -65,7 +65,7 @@ width = 8%
 height = 15
 background = ${color.base}
 modules-center = xkeyboard
-font-0 = JetBrainsMono Nerd Font:pixelsize=9;2
+font-0 = SFMono Nerd Font:pixelsize=9;2
 
 
 [module/bspwm]
@@ -108,7 +108,7 @@ label-disconnected =  %essid% %local_ip%
 
 [module/internet]
 type = custom/script
-interval = 10
+interval = 5
 exec = ping -c 1 8.8.8.8 > /dev/null && echo " 󱚽  " || echo " 󰖪  "
 
 [module/date]
