add alsa script

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -44,7 +44,7 @@ width = 14%
 height = 15
 background = ${color.base}
 foreground = ${color.pink}
-modules-center = internet wlan
+modules-center = internet wired
 font-0 = SFMono Nerd Font:pixelsize=9;2
 
 [bar/battery]
@@ -56,6 +56,17 @@ height = 15
 background = ${color.base}
 modules-center = battery
 font-0 = SFMono Nerd Font:pixelsize=9;2
+
+[bar/alsa]
+line-size = 2
+offset-x = 55.5%
+offset-y = 2
+width = 4%
+height = 15
+background = ${color.base}
+modules-center = alsa
+font-0 = SFMono Nerd Font:pixelsize=9;2
+
 
 [bar/keyboard]
 line-size = 2
@@ -91,25 +102,32 @@ label-active-padding = 1
 type = internal/xwindow
 label = %title:0:60:...%
 
-[network-base]
+[module/network]
 type = internal/network
+interface = enp2s0
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-ip = 8.8.8.8
-ping_interval = 2
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected =  %essid% %local_ip%
-label-disconnected =  %essid% %local_ip%
 
 [module/internet]
 type = custom/script
 interval = 5
 exec = ping -c 1 8.8.8.8 > /dev/null && echo " 󱚽  " || echo " 󰖪  "
+
+[module/wifi]
+type = internal/network
+interface = wlp1s0
+interval = 5
+label-connected = %local_ip%
+label-disconnected = disconnected
+
+[module/wired]
+type = internal/network
+interface = enp2s0
+interval = 1
+label-connected = %local_ip% %downspeed%
+label-disconnected = disconnected
 
 [module/date]
 type = internal/date
@@ -153,3 +171,8 @@ label-layout-foreground = ${color.mauve}
 label-indicator-padding = 1
 label-indicator-foreground = ${color.rosewater}
 label-indicator-background = ${color.base}
+
+[module/alsa]
+type = custom/script
+exec = ~/.config/polybar/scripts/alsa.sh
+interval = 0
