--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,83 +1,19 @@
-;; Polybar
+;; Polybar Minimal Config
 
 include-file = ~/.config/polybar/colors.ini
 
-font-0 = SFMonoNerdFont:10;2
-
-[bar/workspaces]
-offset-x = 0.5%
-offset-y = 2
-width = 16.5%
+[bar/bar]
+offset-x = 0.0
+offset-y = 0
+width = 100%
 height = 15
-background = ${color.base}
-foreground = ${color.crust}
-modules-center = bspwm
 font-0 = SFMono Nerd Font:pixelsize=9;2
-
-[bar/xwindow]
-line-size = 2
-offset-x = 17.5%
-offset-y = 2
-width = 32%
-height = 15
 background = ${color.base}
-foreground = ${color.peach}
+separator = |
+module-margin = 1
+modules-left = bspwm updates-xbps
 modules-center = xwindow
-font-0 = SFMono Nerd Font:pixelsize=9;2
-
-[bar/date]
-line-size = 2
-offset-x = 87.5%
-offset-y = 2
-width = 12%
-height = 15
-background = ${color.base}
-foreground = ${color.green}
-modules-center = date
-font-0 = SFMono Nerd Font:pixelsize=9;2
-
-[bar/wlan]
-line-size = 2
-offset-x = 73%
-offset-y = 2
-width = 14%
-height = 15
-background = ${color.base}
-foreground = ${color.pink}
-modules-center = internet wired
-font-0 = SFMono Nerd Font:pixelsize=9;2
-
-[bar/battery]
-line-size = 2
-offset-x = 60%
-offset-y = 2
-width = 4%
-height = 15
-background = ${color.base}
-modules-center = battery
-font-0 = SFMono Nerd Font:pixelsize=9;2
-
-[bar/alsa]
-line-size = 2
-offset-x = 55.5%
-offset-y = 2
-width = 4%
-height = 15
-background = ${color.base}
-modules-center = alsa
-font-0 = SFMono Nerd Font:pixelsize=9;2
-
-
-[bar/keyboard]
-line-size = 2
-offset-x = 64.5%
-offset-y = 2
-width = 8%
-height = 15
-background = ${color.base}
-modules-center = xkeyboard
-font-0 = SFMono Nerd Font:pixelsize=9;2
-
+modules-right = alsa battery xkeyboard wifi cable internet date
 
 [module/bspwm]
 type = internal/bspwm
@@ -88,46 +24,46 @@ ws-icon-default = 
 
 label-occupied = 
 label-occupied-foreground = ${color.teal}
+label-occupied-background = ${color.base}
 label-occupied-padding = 1
 
 label-empty = 
 label-empty-foreground = ${color.rosewater}
+label-empty-background = ${color.base}
 label-empty-padding = 1
 
 label-active = 
 label-active-foreground = ${color.teal}
+label-active-background = ${color.base}
 label-active-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
-
-[module/network]
-type = internal/network
-interface = enp2s0
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-foreground = ${color.flamingo}
+label-background = ${color.base}
 
 [module/internet]
 type = custom/script
 interval = 5
-exec = ping -c 1 8.8.8.8 > /dev/null && echo " 󱚽  " || echo " 󰖪  "
+exec = ping -c 1 8.8.8.8 > /dev/null 2>&1 && echo "󱚽 " || echo "󰖪"
+label-foreground = ${color.green}
 
 [module/wifi]
 type = internal/network
 interface = wlp1s0
 interval = 5
-label-connected = %local_ip%
+label-connected = %ifname% %local_ip%
 label-disconnected = disconnected
+label-foreground = ${color.text}
 
-[module/wired]
+[module/cable]
 type = internal/network
 interface = enp2s0
 interval = 1
-label-connected = %local_ip% %downspeed%
+label-connected = %ifname% %local_ip%
 label-disconnected = disconnected
+label-foreground = ${color.mouve}
 
 [module/date]
 type = internal/date
@@ -138,9 +74,6 @@ date =  %Y-%m-%d %I:%M %p
 label = %date%
 label-foreground = ${color.rosewater}
 
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
 
 ; vim:ft=dosini
 
@@ -148,7 +81,7 @@ pseudo-transparency = true
 type = internal/battery
 battery = BATT
 adapter = ACAD
-format-full =    %100%
+format-full =   %100%
 format-charging =   <label-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
 format-charging-foreground = ${color.green}
@@ -160,6 +93,7 @@ ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 animation-charging-framerate = 100
+label-foreground = ${color.text}
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -167,12 +101,16 @@ blacklist-0 = num lock
 
 label-layout = %layout%
 label-layout-foreground = ${color.mauve}
-
 label-indicator-padding = 1
 label-indicator-foreground = ${color.rosewater}
-label-indicator-background = ${color.base}
 
 [module/alsa]
 type = custom/script
 exec = ~/.config/polybar/scripts/alsa.sh
 interval = 0
+label-foreground = ${color.text}
+
+[module/updates-xbps]
+type = custom/script
+exec = ~/.config/polybar/scripts/xbps.sh
+interval = 20
