--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -3,16 +3,16 @@
 include-file = ~/.config/polybar/colors.ini
 
 [bar/bar]
-offset-x = 0.0
-offset-y = 0
-width = 100%
-height = 15
+offset-x = 12
+offset-y = 2
+width = 98%
+height = 17
 font-0 = SFMono Nerd Font:pixelsize=9;2
 background = ${color.base}
 separator = |
 module-margin = 1
-modules-left = bspwm updates-xbps
-modules-center = xwindow
+modules-left = bspwm updates-xbps xwindow
+;; modules-center = xwindow
 modules-right = alsa battery xkeyboard wifi cable internet date
 
 [module/bspwm]
@@ -69,7 +69,7 @@ label-foreground = ${color.mouve}
 type = internal/date
 interval = 1
 
-date =  %Y-%m-%d %I:%M %p
+date = " %Y-%m-%d %I:%M %p "
 
 label = %date%
 label-foreground = ${color.rosewater}
