--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,22 +1,19 @@
 #################################
 #     GLX backend
 #################################
-backend = "glx";
-#glx-no-stencil = true;
-#glx-no-rebind-pixmap = true;
-vsync = true;
-xrender-sync-fence = "true";
-#glx-swap-method = -1;
+# Archivo de configuración de Picom
+
+backend = "xrender";
+# vsync = true;
 
 #################################
 #       Shadows
 #################################
 shadow = true;
-shadow-radius = 20;
-shadow-offset-x = -20;
-shadow-offset-y = -20;
-shadow-opacity = 0.55;
-shadow-ignore-shaped = false;
+shadow-radius = 10;
+shadow-offset-x = -9;
+shadow-offset-y = -7;
+shadow-opacity = 0.75;
 
 #################################
 #       Corners
@@ -24,4 +21,3 @@ shadow-ignore-shaped = false;
 
 corner-radius = 7;
 round-borders = 7;
-
