--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -13,7 +13,7 @@ separator = |
 module-margin = 1
 modules-left = bspwm updates-xbps xwindow
 ;; modules-center = xwindow
-modules-right = alsa battery xkeyboard wifi cable internet date
+modules-right = disco alsa battery xkeyboard wifi cable internet date
 
 [module/bspwm]
 type = internal/bspwm
@@ -114,3 +114,11 @@ label-foreground = ${color.text}
 type = custom/script
 exec = ~/.config/polybar/scripts/xbps.sh
 interval = 20
+
+[module/disco]
+type = custom/script
+exec = df -h / | awk 'NR==2{print $4}'
+interval = 60
+label =  %output%
+label-font = 2
+
