--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -105,6 +105,7 @@ label-indicator-foreground = ${color.rosewater}
 [module/alsa]
 type = custom/script
 exec = ~/.config/polybar/scripts/alsa.sh
+interval = 5
 label-foreground = ${color.text}
 
 [module/updates-xbps]
