--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,5 +1,4 @@
-# Source:   https://github.com/Chick2D/neofetch-themes/ 
-# Made by:  https://github.com/gosxrgxx (simpleFetch)
+# Alyssa - 2023
 
 print_info() {
     info "$(color 4) " distro
