--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -267,7 +267,7 @@ disk_display="off"
 # Values:   "ascii", "caca", "chafa", "jp2a", "iterm2", "off",
 #           "termpix", "pixterm", "tycat", "w3m", "kitty", "ueberzug"
 # Flag:     --backend
-image_backend="kitty"
+image_backend="ascii"
 
 # Image Source
 #
