fix: keymaps for scroll

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,5 @@
 set -g default-terminal "st-256color"
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+setw -g mode-keys vi
 
 bind-key -n M-[ split-window -h
 bind-key -n M-] split-window -v 
@@ -10,12 +8,11 @@ bind-key -n M-h select-pane -R
 bind-key -n M-l select-pane -L 
 bind-key -n M-j select-pane -D
 bind-key -n M-k select-pane -U
-bind-key -n M-n new-window
+bind-key -n M-t new-window
 bind-key -n M-r command-prompt -I "" { rename-window "%%" }
 bind-key -n M-space copy-mode
-bind-key -n M-j send-keys -X scroll-down
-bind-key -n M-k send-keys -X scroll-up
-
+bind-key -T copy-mode-vi M-j send-keys -X scroll-down
+bind-key -T copy-mode-vi M-k send-keys -X scroll-up
 
 bind-key -n M-1 select-window -t :=0
 bind-key -n M-2 select-window -t :=1
