--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ bind-key -n M-k select-pane -U
 bind-key -n M-t new-window
 bind-key -n M-r command-prompt -I "" { rename-window "%%" }
 bind-key -n M-space copy-mode
+bind-key -T copy-mode-vi M-space send-keys -X cancel
 bind-key -T copy-mode-vi M-j send-keys -X scroll-down
 bind-key -T copy-mode-vi M-k send-keys -X scroll-up
 
