update: new config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,24 +1,12 @@
+# Settings
 set -g default-terminal "st-256color"
-setw -g mode-keys vi
+source ~/.config/tmux/maps.conf 
+source ~/.config/tmux/tokyo.tmux
 
-bind-key -n M-[ split-window -h
-bind-key -n M-] split-window -v 
-bind-key -n M-w kill-pane
-bind-key -n M-h select-pane -R 
-bind-key -n M-l select-pane -L 
-bind-key -n M-j select-pane -D
-bind-key -n M-k select-pane -U
-bind-key -n M-t new-window
-bind-key -n M-r command-prompt -I "" { rename-window "%%" }
-bind-key -n M-space copy-mode
-bind-key -T copy-mode-vi M-space send-keys -X cancel
-bind-key -T copy-mode-vi M-j send-keys -X scroll-down
-bind-key -T copy-mode-vi M-k send-keys -X scroll-up
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
-bind-key -n M-1 select-window -t :=0
-bind-key -n M-2 select-window -t :=1
-bind-key -n M-3 select-window -t :=2
-bind-key -n M-4 select-window -t :=3
-bind-key -n M-5 select-window -t :=4
 
-source ~/.config/tmux/statusline.conf
+run '~/.config/tmux/plugins/tpm/tpm'
