update: clean repo

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,7 +3,7 @@
 #################################
 # Archivo de configuración de Picom
 
-backend = "xrender";
+backend = "glx";
 # vsync = true;
 
 #################################
@@ -11,9 +11,9 @@ backend = "xrender";
 #################################
 shadow = true;
 shadow-radius = 10;
-shadow-offset-x = -9;
-shadow-offset-y = -7;
-shadow-opacity = 0.75;
+shadow-offset-x = -10;
+shadow-offset-y = -10;
+shadow-opacity = 0.8;
 
 #################################
 #       Corners
@@ -21,3 +21,6 @@ shadow-opacity = 0.75;
 
 corner-radius = 7;
 round-borders = 7;
+
+blur-method = "dual_kawase"
+blur-strength = 10
