update: clean repo

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,16 @@
 # Settings
 set -g default-terminal "st-256color"
 source ~/.config/tmux/maps.conf 
-source ~/.config/tmux/tokyo.tmux
+
+set -g status-bg '#071013'
+set -g status-fg '#f1f1f7'
+
+# source ~/.config/tmux/tokyo.tmux
 
 # Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'niksingh710/minimal-tmux-status'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'niksingh710/minimal-tmux-status'
 
 
-run '~/.config/tmux/plugins/tpm/tpm'
+# run '~/.config/tmux/plugins/tpm/tpm'
