update: exclude lemonbar rounded corners

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -22,5 +22,9 @@ shadow-opacity = 0.8;
 corner-radius = 7;
 round-borders = 7;
 
-blur-method = "dual_kawase"
-blur-strength = 10
+rounded-corners-exclude = [
+	"class_g = 'Bar'"
+];
+
+blur-method = "dual_kawase";
+blur-strength = 10;
