add: animations picom

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,8 +3,28 @@
 #################################
 # Archivo de configuración de Picom
 
+
+animations = true;
+animation-stiffness-in-tag = 125;
+animation-stiffness-tag-change = 90.0;
+
+animation-window-mass = 0.4;
+animation-dampening = 15;
+animation-clamping = true;
+
+animation-for-open-window = "zoom";
+animation-for-unmap-window = "squeeze";
+animation-for-transient-window = "zoom"; #available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
+
+animation-for-prev-tag = "minimize";
+enable-fading-prev-tag = true;
+
+animation-for-next-tag = "slide-in-center";
+enable-fading-next-tag = true;
+
+
 backend = "glx";
-# vsync = true;
+vsync = true;
 
 #################################
 #       Shadows
