update: clean repo

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,9 +1,4 @@
-#################################
-#     GLX backend
-#################################
-# Archivo de configuración de Picom
-
-
+#       Animations
 animations = true;
 animation-stiffness-in-tag = 125;
 animation-stiffness-tag-change = 90.0;
@@ -23,28 +18,28 @@ animation-for-next-tag = "slide-in-center";
 enable-fading-next-tag = true;
 
 
+#       General
 backend = "glx";
 vsync = true;
 
-#################################
 #       Shadows
-#################################
 shadow = true;
 shadow-radius = 10;
 shadow-offset-x = -10;
 shadow-offset-y = -10;
 shadow-opacity = 0.8;
+shadow-exclude = [
+	"class_g = 'Bar'"
+]
 
-#################################
 #       Corners
-#################################
 
 corner-radius = 7;
 round-borders = 7;
-
 rounded-corners-exclude = [
 	"class_g = 'Bar'"
 ];
 
+#       Blur
 blur-method = "dual_kawase";
 blur-strength = 10;
