--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,10 +2,22 @@
 set -g default-terminal "st-256color"
 source ~/.config/tmux/maps.conf 
 
-set -g status-bg '#071013'
-set -g status-fg '#f1f1f7'
+set -g status-bg '#081d21'
+set -g status-fg '#9ba9aa'
 
-# source ~/.config/tmux/tokyo.tmux
+set -g status-left ''
+set -g status-right ''
+
+set -g status-style bg=default,fg=default
+set -g status-interval 5
+set -g status-justify left
+set -g status-left-length 20
+set -g status-right-length 0
+set -g status-left ''
+set -g status-right ''
+set -g window-status-current-style bg=green,fg=white
+set -g window-status-current-format ' #I #W '
+set -g window-status-format ' #I #W '
 
 # Plugins
 # set -g @plugin 'tmux-plugins/tpm'
