--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,5 +1,5 @@
 #       Animations
-animations = true;
+animations = false;
 animation-stiffness-in-tag = 125;
 animation-stiffness-tag-change = 90.0;
 
@@ -20,26 +20,27 @@ enable-fading-next-tag = true;
 
 #       General
 backend = "glx";
+# backend = "xrender";
 vsync = true;
 
 #       Shadows
-shadow = true;
-shadow-radius = 10;
-shadow-offset-x = -10;
-shadow-offset-y = -10;
-shadow-opacity = 0.8;
-shadow-exclude = [
-	"class_g = 'Bar'"
-]
+# shadow = true;
+# shadow-radius = 10;
+# shadow-offset-x = -10;
+# shadow-offset-y = -10;
+# shadow-opacity = 0.8;
+# shadow-exclude = [
+# 	"class_g = 'Bar'"
+# ]
 
 #       Corners
 
-corner-radius = 7;
-round-borders = 7;
-rounded-corners-exclude = [
-	"class_g = 'Bar'"
-];
+# corner-radius = 7;
+# round-borders = 7;
+# rounded-corners-exclude = [
+# 	"class_g = 'Bar'"
+# ];
 
 #       Blur
 blur-method = "dual_kawase";
-blur-strength = 10;
+blur-strength = 3;
