update: change color foreground

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ set -g status-left-length 20
 set -g status-right-length 0
 set -g status-left ''
 set -g status-right ''
-set -g window-status-current-style bg=green,fg='#e1e1e1'
+set -g window-status-current-style bg=green,fg='#f1f1f1'
 set -g window-status-current-format ' #I #W '
 set -g window-status-format ' #I #W '
 
