--- a/alacritty/themes/asha.toml
+++ b/alacritty/themes/asha.toml
@@ -1,27 +1,25 @@
 [colors]
 
-  [colors.primary]
-	# background = "#051012"	
-	background = "#09171a"	
-	# background = "#141b1e"
-	foreground = "#efefef"
+[colors.primary]
+	background = "#09171a"
+	foreground = "#f8e7c2"
 
-  [colors.normal]
-  black = "#253032"
-  red = "#91615e"
-  green = "#667651"
-  yellow = "#a18a5d"
-  blue = "#607f94"
-  magenta = "#997459"
-  cyan = "#5f8787"
-  white = "#808587"
+	[colors.normal]
+		black    = "#1b2b30" # sin cambios
+		red      = "#915a5a" # sin cambios
+		green    = "#5c7a53" # sin cambios
+		yellow   = "#a18a5d" # sin cambios
+		blue     = "#3a6f94" # ajustado para mayor contraste
+		magenta  = "#8b4b59" # ajustado para mayor contraste
+		cyan     = "#2f8887" # ajustado para mayor contraste
+		white    = "#F4EBD7" # sin cambios
 
   [colors.bright]
-  black = "#253032"
-  red = "#91615e"
-  green = "#667651"
-  yellow = "#a18a5d"
-  blue = "#607f94"
-  magenta = "#997459"
-  cyan = "#5f8787"
-  white = "#808587"
+		black    = "#1b2b30" # sin cambios
+		red      = "#915a5a" # sin cambios
+		green    = "#5c7a53" # sin cambios
+		yellow   = "#a18a5d" # sin cambios
+		blue     = "#3a6f94" # ajustado para mayor contraste
+		magenta  = "#8b4b59" # ajustado para mayor contraste
+		cyan     = "#2f8887" # ajustado para mayor contraste
+		white    = "#F4EBD7" # sin cambios
