--- a/alacritty/config.toml
+++ b/alacritty/config.toml
@@ -1,13 +1,13 @@
 general.live_config_reload = true
 
 [cursor]
-blink_interval = 550
+blink_interval = 500
 unfocused_hollow = false
 
 [cursor.style]
 blinking = "On"
-shape = "Underline"
-# shape = "Beam"
+# shape = "Underline"
+shape = "Beam"
 
 [selection]
 save_to_clipboard = true
