--- a/alacritty/colorschemes/material.toml
+++ b/alacritty/colorschemes/material.toml
@@ -1,28 +1,58 @@
 # Colors (Gruvbox Material Hard Dark)
 
 # Default colors
+# [colors.primary]
+# background = '#1d2021'
+# foreground = '#d4be98'
+
+# Normal colors
+# [colors.normal]
+# black = '#32302f'
+# red = '#ea6962'
+# green = '#a9b665'
+# yellow = '#d8a657'
+# blue = '#7daea3'
+# magenta = '#d3869b'
+# cyan = '#89b482'
+# white = '#d4be98'
+
+# Bright colors (same as normal colors)
+# [colors.bright]
+# black = '#32302f'
+# red = '#ea6962'
+# green = '#a9b665'
+# yellow = '#d8a657'
+# blue = '#7daea3'
+# magenta = '#d3869b'
+# cyan = '#89b482'
+# white = '#d4be98'
+
+# Colors (Gruvbox Material Hard Dark)
+
+# Default colors
 [colors.primary]
-background = '#0d1416'
-foreground = '#d4be98'
+# background = '#1d2021'
+background = '#141617'
+foreground = '#e2cca9'
 
 # Normal colors
 [colors.normal]
-black   = '#32302f'
-red     = '#ea6962'
-green   = '#a9b665'
-yellow  = '#d8a657'
-blue    = '#7daea3'
+black = '#282828'
+red = '#f2592d'
+green = '#b0b846'
+yellow = '#e9b143'
+blue = '#80aa9a'
 magenta = '#d3869b'
-cyan    = '#89b482'
-white   = '#d4be98'
+cyan = '#8bba7f'
+white = '#e2cca9'
 
 # Bright colors (same as normal colors)
 [colors.bright]
-black   = '#32302f'
-red     = '#ea6962'
-green   = '#a9b665'
-yellow  = '#d8a657'
-blue    = '#7daea3'
+black = '#b5a188'
+red = '#f2592d'
+green = '#b0b846'
+yellow = '#e9b143'
+blue = '#80aa9a'
 magenta = '#d3869b'
-cyan    = '#89b482'
-white   = '#d4be98'
+cyan = '#8bba7f'
+white = '#e2cca9'
