--- a/alacritty/fonts.toml
+++ b/alacritty/fonts.toml
@@ -1,12 +1,8 @@
 [font]
-size = 10.1
-offset = { x = -1, y = 0 } 
-glyph_offset = { x = -1, y = 0 }
+size = 9
+offset = { x = 0, y = 0 }
+glyph_offset = { x = 0, y = 0 }
 
 [font.normal]
 family = "GeistMono Nerd Font"
-style = "Auto"
-
-# [font.normal]
-# family = "MartianMono Nerd Font"
-# style = "Auto"
+style = "SemiBold"
