--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,12 @@
 # Settings
-set -g default-terminal "st-256color"
+# set -g default-terminal "st-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 source ~/.config/tmux/maps.conf 
 
 # set -g status-bg '#081d21'
@@ -15,9 +22,10 @@ set -g status-left-length 20
 set -g status-right-length 0
 set -g status-left ''
 set -g status-right ''
-set -g window-status-current-style bg=green,fg='#f1f1f1'
+set -g window-status-current-style bg=yellow,fg="#282828"
 set -g window-status-current-format ' #I #W '
 set -g window-status-format ' #I #W '
+set -g cursor-style bar
 
 # Plugins
 # set -g @plugin 'tmux-plugins/tpm'
