--- a/tmux/maps.conf
+++ b/tmux/maps.conf
@@ -14,8 +14,14 @@ bind-key -T copy-mode-vi M-space send-keys -X cancel
 bind-key -T copy-mode-vi M-j send-keys -X scroll-down
 bind-key -T copy-mode-vi M-k send-keys -X scroll-up
 
+
+
 bind-key -n M-1 select-window -t :=0
 bind-key -n M-2 select-window -t :=1
 bind-key -n M-3 select-window -t :=2
 bind-key -n M-4 select-window -t :=3
 bind-key -n M-5 select-window -t :=4
+bind-key -n M-<	resize-pane -L 5
+bind-key -n M->	resize-pane -R 5
+bind-key -n M-^	resize-pane -U 5
+bind-key -n M-v	resize-pane -D 5
