--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-# Settings
-# set -g default-terminal "st-256color"
+# setting up tmux 
+
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
@@ -8,9 +8,6 @@ set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
 source ~/.config/tmux/maps.conf 
-
-# set -g status-bg '#081d21'
-# set -g status-fg '#9ba9aa'
 
 set -g status-left ''
 set -g status-right ''
@@ -27,10 +24,3 @@ set -g window-status-current-format ' #I #W '
 set -g window-status-format ' #I #W '
 set -g cursor-style bar
 
-# Plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'niksingh710/minimal-tmux-status'
-
-
-# run '~/.config/tmux/plugins/tpm/tpm'
